test/cases/compile_errors/empty_char_lit.zig
export fn entry() u8 {
    return '';
}

// error
// backend=stage2
// target=native
//
// :2:12: error: empty character literal
